Eventos en Angular y llamada a metodos

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,6 +5,7 @@
 
 <h3> Counter: {{counter}} </h3>
 
-<button>+1</button>
-<button>-1</button>
+<button (click)="increaseBy(7)">+1</button>
+<button (click)="increaseBy(-5)">-1</button>
+<button (click)="resetCounter()">Reset</button>
 
